Assets/TencentIMSDK/Plugins/iOS/ImSDK_iOS_C.xcframework/ios-arm64_armv7/ImSDK_iOS_C.framework/Headers/TIMCloud.h


TIM_DECL void TIMSetExperimentalNotifyCallback(TIMExperimentalNotifyCallback cb, const void *user_data);