Assets/TencentIMSDK/Native/NativeSDK.cs


    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityCreatePermissionGroupCallback(TIMCommunityCreatePermissionGroupCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityDeletePermissionGroupCallback(TIMCommunityDeletePermissionGroupCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityChangePermissionGroupInfoCallback(TIMCommunityChangePermissionGroupInfoCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityAddMembersToPermissionGroupCallback(TIMCommunityAddMembersToPermissionGroupCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityRemoveMembersFromPermissionGroupCallback(TIMCommunityRemoveMembersFromPermissionGroupCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityAddTopicPermissionCallback(TIMCommunityAddTopicPermissionCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityDeleteTopicPermissionCallback(TIMCommunityDeleteTopicPermissionCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityModifyTopicPermissionCallback(TIMCommunityModifyTopicPermissionCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetExperimentalNotifyCallback(TIMExperimentalNotifyCallback cb, IntPtr user_data);



    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void CommonValueCallback(int code, IntPtr desc, IntPtr json_param, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMNetworkStatusListenerCallback(int status, int code, IntPtr desc, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMKickedOfflineCallback(IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMUserSigExpiredCallback(IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMRecvNewMsgCallback(IntPtr json_msg_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]

    public delegate void TIMMsgReactionsChangedCallback(IntPtr message_reaction_change_info_array,IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]

    public delegate void TIMMsgAllMessageReceiveOptionCallback(IntPtr json_receive_message_option_info, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMMsgReadedReceiptCallback(IntPtr json_msg_readed_receipt_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMMsgRevokeCallback(IntPtr json_msg_locator_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMMsgElemUploadProgressCallback(IntPtr json_msg, int index, int cur_size, int total_size, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMMsgUpdateCallback(IntPtr json_msg_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMMsgGroupMessageReadMemberListCallback(IntPtr json_group_member_array, ulong next_seq, bool is_finished, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMMsgExtensionsChangedCallback(IntPtr message_id, IntPtr message_extension_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMMsgExtensionsDeletedCallback(IntPtr message_id, IntPtr message_extension_key_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMMsgGroupPinnedMessageChangedCallback(IntPtr group_id, IntPtr json_msg, bool is_pinned, IntPtr op_user, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMGroupTipsEventCallback(IntPtr json_group_tip_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMGroupAttributeChangedCallback(IntPtr group_id, IntPtr json_group_attribute_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMGroupCounterChangedCallback(IntPtr group_id, IntPtr group_counter_key, ulong group_counter_new_value, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMConvEventCallback(int conv_event, IntPtr json_conv_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMConvConversationGroupCreatedCallback(IntPtr group_name, IntPtr conversation_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMConvConversationGroupDeletedCallback(IntPtr group_name, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMConvConversationGroupNameChangedCallback(IntPtr old_name, IntPtr new_name, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMConvConversationsAddedToGroupCallback(IntPtr group_name, IntPtr conversation_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMConvConversationsDeletedFromGroupCallback(IntPtr group_name, IntPtr conversation_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMConvTotalUnreadMessageCountChangedCallback(int total_unread_count, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMConvTotalUnreadMessageCountChangedByFilterCallback(IntPtr filter, int total_unread_count, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMOnAddFriendCallback(IntPtr json_identifier_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMOnDeleteFriendCallback(IntPtr json_identifier_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMUpdateFriendProfileCallback(IntPtr json_friend_profile_update_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMFriendAddRequestCallback(IntPtr json_friend_add_request_pendency_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMFriendApplicationListDeletedCallback(IntPtr json_identifier_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMFriendApplicationListReadCallback(IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMFriendBlackListAddedCallback(IntPtr json_friend_black_added_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMFriendBlackListDeletedCallback(IntPtr json_identifier_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMGroupTopicCreatedCallback(IntPtr group_id, IntPtr topic_id, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMGroupTopicDeletedCallback(IntPtr group_id, IntPtr topic_id_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMGroupTopicChangedCallback(IntPtr group_id, IntPtr topic_info, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMSelfInfoUpdatedCallback(IntPtr json_user_profile, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMUserStatusChangedCallback(IntPtr json_user_status_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMUserInfoChangedCallback(IntPtr json_user_info_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMFriendGroupCreatedCallback(IntPtr group_name, IntPtr json_friend_info_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMFriendGroupDeletedCallback(IntPtr json_group_name_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMFriendGroupNameChangedCallback(IntPtr old_group_name, IntPtr new_group_name, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMFriendsAddedToGroupCallback(IntPtr group_name, IntPtr json_friend_info_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMFriendsDeletedFromGroupCallback(IntPtr group_name, IntPtr json_friend_id_array, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMOfficialAccountSubscribedCallback(IntPtr json_official_account_info, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMOfficialAccountUnsubscribedCallback(IntPtr official_account_id, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMOfficialAccountDeletedCallback(IntPtr official_account_id, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMOfficialAccountInfoChangedCallback(IntPtr json_official_account_info, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMMyFollowingListChangedCallback(IntPtr json_user_info_list, bool is_add, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMMyFollowersListChangedCallback(IntPtr json_user_info_list, bool is_add, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMMutualFollowersListChangedCallback(IntPtr json_user_info_list, bool is_add, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMSignalingReceiveNewInvitationCallback(IntPtr invite_id, IntPtr inviter, IntPtr group_id, IntPtr json_invitee_list, IntPtr data, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMSignalingInvitationCancelledCallback(IntPtr invite_id, IntPtr inviter, IntPtr data, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMSignalingInviteeAcceptedCallback(IntPtr invite_id, IntPtr invitee, IntPtr data, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMSignalingInviteeRejectedCallback(IntPtr invite_id, IntPtr invitee, IntPtr data, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMSignalingInvitationTimeoutCallback(IntPtr invite_id, IntPtr json_invitee_list, IntPtr user_data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void TIMSignalingInvitationModifiedCallback(IntPtr invite_id, IntPtr data, IntPtr user_data);
